--- a/estilo.css
+++ b/estilo.css
@@ -63,7 +63,7 @@ body{
 /* *********** */
 .inicio{
     height: 100vh;
-    background:linear-gradient(rgba(0, 1, 3, 0.5), rgba(0,0,0,.7)),url(img/fondo.jpg);
+    background:linear-gradient(rgba(0, 1, 3, 0.5), rgba(0,0,0,.7)),url(img/fondo_1.jpg);
     background-size: cover;
     background-position: center center;
     color: #fff;
@@ -349,7 +349,7 @@ body{
 }
 .galeria .contenido-seccion{
     max-width: 1100px;
-    margin: auto;
+    margin: center;
     padding: 0 20px;
 }
 .galeria .contenedor-titulo{
