--- a/estilo.css
+++ b/estilo.css
@@ -338,6 +338,91 @@ body{
     color: #ff1133;
 }
 /* ********** */
+/* PLANES */
+/* ********** */
+.planes{
+    color: #fff;
+    position: relative;
+}
+.planes .contenido-seccion{
+    background:linear-gradient( rgba(0, 14, 41, 0.6), rgba(0, 7, 78, 0.7)),url(img/fondo-servicios.jpg);
+    background-size: cover;
+    background-position: center center;
+    margin: auto;
+    padding: 0 20px;
+}
+.planes .contenido-seccion .fila{
+    max-width: 1100px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    padding: 100px 0;
+}
+.planes .contenido-seccion .fila .col{
+    width: 50%;
+}
+.planes .contenido-seccion .fila .col img{
+    display: block;
+    width: 50%;
+    margin: auto;
+}
+.planes .fila .col .contenedor-titulo{
+    display: flex;
+    align-items: center;
+}
+.planes .fila .col .contenedor-titulo .numero{
+    color: #ff1133;
+    font-weight: bold;
+    display: block;
+    font-size: 5rem;
+}
+.planes .fila .col .contenedor-titulo .info{
+    margin-left: 30px;
+}
+.planes .fila .col .contenedor-titulo .info .frase{
+    color: #ff1133;
+}
+.planes .fila .col .contenedor-titulo .info h2{
+    font-size: 3rem;
+}
+.planes .fila .col p{
+   margin-bottom: 10px;
+   line-height: 28px;
+}
+.planes .fila .col .p-especial{
+    font-weight: bold;
+}
+.planes .info-planes{
+    max-width: 800px;
+    margin: auto;
+}
+.planes .info-planes table{
+    text-align: center;
+    background-color: #fff;
+    color: #1f283e;
+    border-collapse: collapse;
+    position: relative;
+    bottom: 100px;
+}
+.planes .info-planes table td{
+    padding: 30px;
+    border: 1px solid #dde1e9
+}
+.planes .info-planes table td i{
+    color: #ff1133;
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+
+}
+.planes .info-planes h3{
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+.planes .info-planes p{
+    line-height: 30px;
+}
+
+/* ********** */
 /* GALERIA */
 /* ********** */
 .galeria{
@@ -506,7 +591,7 @@ body{
 .contacto button{
     display: block;
     width: fit-content;
-    margin: auto;
+    margin: center;
     margin-top: 30px;
     border: none;
     background-color: #ff1133;
