--- a/estilo.css
+++ b/estilo.css
@@ -11,6 +11,7 @@ html{
 body{
     background-color: #dde1e9;
 }
+
 /* *********** */
 /* ENCABEZADO - MENU */
 /* *********** */
@@ -733,5 +734,49 @@ footer .info a{
     }
     footer .info p{
         margin-bottom: 10px;
+    }
+}
+
+/* === Ajustes Responsive Adicionales === */
+.video-container {
+    position: relative;
+    width: 100%;
+    padding-top: 56.25%; /* Proporción 16:9 */
+    overflow: hidden;
+}
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+@media only screen and (max-width: 600px) {
+    h2 {
+        font-size: 2rem !important;
+    }
+    .numero {
+        font-size: 3rem !important;
+    }
+    input, textarea {
+        font-size: 16px;
+    }
+
+    .info-servicios table,
+    .info-planes table {
+        display: block;
+        width: 100%;
+    }
+    .info-servicios table tr,
+    .info-planes table tr {
+        display: block;
+    }
+    .info-servicios table td,
+    .info-planes table td {
+        display: block;
+        width: 100%;
+        box-sizing: border-box;
     }
 }
